load data from json file, need to get functional

--- a/viz/decision_tree.html
+++ b/viz/decision_tree.html
@@ -12,14 +12,14 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div id="about">
+    <div>
         <h1>CIS 678: Project 3 - Decision Tree</h1>
         <p>machine learning project to build a decision tree and make predictions</p>
     </div>
     <div id="decision_tree">
     </div>
     <!-- load the d3.js library -->
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/decision_tree.js"></script>
 </body>
 </html>
