d3 tree using json file

--- a/viz/decision_tree.html
+++ b/viz/decision_tree.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <h1>CIS 678: Project 3 - Decision Tree</h1>
-        <p>machine learning project to build a decision tree and make predictions</p>
+        <p>Build a decision tree for predictions.</p>
     </div>
     <div id="decision_tree">
     </div>
