--- a/viz/decision_tree.html
+++ b/viz/decision_tree.html
@@ -20,6 +20,9 @@
     </div>
     <!-- load the d3.js library -->
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script>
+        var datasetFile = "data/contact_lenses_viz.json";
+    </script>
     <script type="text/javascript" src="js/decision_tree.js"></script>
 </body>
 </html>
