--- a/viz/decision_tree.html
+++ b/viz/decision_tree.html
@@ -21,7 +21,7 @@
     <!-- load the d3.js library -->
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
     <script>
-        var datasetFile = "data/contact_lenses_viz.json";
+        var datasetFile = "data/decision_tree.json";
     </script>
     <script type="text/javascript" src="js/decision_tree.js"></script>
 </body>
