--- a/viz/demos/iris.html
+++ b/viz/demos/iris.html
@@ -17,7 +17,7 @@
 <!-- load the d3.js library -->
 <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-    var datasetFile = "../data/contact_lenses_viz.json";
+    var datasetFile = "../data/iris.json";
 </script>
 <script type="text/javascript" src="../js/decision_tree.js"></script>
 </body>
