--- a/viz/demos/index.html
+++ b/viz/demos/index.html
@@ -10,5 +10,6 @@
 <li><a href="http://cis.gvsu.edu/~baldwmic/cis678/project3/viz/demos/fishing.html" target="_blank">Fishing</a></li>
 <li><a href="http://cis.gvsu.edu/~baldwmic/cis678/project3/viz/demos/contact_lenses.html" target="_blank">Contact Lenses</a></li>
 <li><a href="http://cis.gvsu.edu/~baldwmic/cis678/project3/viz/demos/mushrooms.html" target="_blank">Mushrooms</a></li>
+<li><a href="http://cis.gvsu.edu/~baldwmic/cis678/project3/viz/demos/iris.html" target="_blank">Iris</a></li>
 </ul>
 </html>
